# coval-examples

./: .gitattributes  .gitignore  README.md
.github/workflows/: publish-coval-npm.yml  (+3 more)
.openapi-generator-config/: python.yaml  typescript-fetch.yaml
launch-runs/: launch_run.py
python-sdk/: GENERATED_README.md  README.md  pyproject.toml
python-sdk/examples/: list_agents.py
python-sdk/src/coval_sdk/: __init__.py  api_client.py  client.py  configuration.py  deserialization.py  exceptions.py  pagination.py  rest.py
python-sdk/src/coval_sdk/api/: __init__.py  agents_api.py  api_keys_api.py  audio_api.py  conversations_api.py  dashboards_api.py  metric_outputs_api.py  metrics_api.py  monitor_events_api.py  monitors_api.py  mutations_api.py  organization_conversations_config_api.py  personas_api.py  reports_api.py  review_annotations_api.py  review_projects_api.py  run_templates_api.py  runs_api.py  scheduled_runs_api.py  simulations_api.py  tags_api.py  templates_api.py  test_cases_api.py  test_sets_api.py  traces_api.py  webhooks_api.py  widgets_api.py
python-sdk/src/coval_sdk/models/: __init__.py  coval_agent_mutations_api_create_mutation_request.py  coval_agent_mutations_api_create_mutation_response.py  coval_agent_mutations_api_error_response.py  coval_agent_mutations_api_error_response_error.py  coval_agent_mutations_api_error_response_error_details_inner.py  coval_agent_mutations_api_get_mutation_response.py  coval_agent_mutations_api_list_mutations_response.py  coval_agent_mutations_api_mutation_resource.py  coval_agent_mutations_api_update_mutation_request.py  coval_agent_mutations_api_update_mutation_response.py  coval_agents_api_agent_resource.py  coval_agents_api_agent_version_resource.py  coval_agents_api_create_agent_request.py  coval_agents_api_create_agent_response.py  coval_agents_api_error_response.py  coval_agents_api_error_response_error.py  coval_agents_api_error_response_error_details_inner.py  coval_agents_api_get_agent_response.py  coval_agents_api_list_agent_versions_response.py  coval_agents_api_list_agents_response.py  coval_agents_api_simulator_type.py  coval_agents_api_update_agent_request.py  coval_agents_api_update_agent_response.py  coval_api_keys_api_api_key_resource.py  coval_api_keys_api_api_key_resource_unmasked.py  coval_api_keys_api_api_key_status.py  coval_api_keys_api_create_api_key_request.py  coval_api_keys_api_create_api_key_response.py  coval_api_keys_api_error_response.py  coval_api_keys_api_error_response_error.py  coval_api_keys_api_error_response_error_details_inner.py  coval_api_keys_api_key_type.py  coval_api_keys_api_list_api_keys_response.py  coval_api_keys_api_permission_scope.py  coval_api_keys_api_update_api_key_request.py  coval_api_keys_api_update_api_key_response.py  coval_conversations_api_conversation_progress.py  coval_conversations_api_conversation_resource.py  coval_conversations_api_conversation_resource_destination.py  (+321 more)
python-sdk/tests/: test_client.py  test_deserialization.py  test_pagination.py
scripts/: bundle-spec.mjs  check-python-sdk-version.mjs  generate-sdks.sh  package-lock.json  package.json  patch-generated-python.py  patch-generated-ts.mjs
test-sets/: generate_test_set.py
typescript-sdk/: README.md  package-lock.json  package.json  tsconfig.json
upload-conversations/: aws_upload.py  gcp_upload.py  generic_signed_url_upload.py  twilio_upload.py  vapi_upload.py
voice-agents/: README.md
voice-agents/livekit/: README.md  agent.py  coval_tracing.py  livekit.toml  pyproject.toml  token_server.py
voice-agents/livekit/tests/: conftest.py  test_coval_tracing.py
voice-agents/pipecat/: Dockerfile  README.md  bot.py  pcc-deploy.toml  pyproject.toml
(+17 files in other folders)
